# shynote

./: .gitignore  Dockerfile  GEMINI.md  LICENSE  README.md  config.json  docker-build.sh  docker-compose.yaml  docker-run.sh  migrate_db.py  migration.sql  package-lock.json  package.json  pyproject.toml  repro_marked.js  requirements.txt  reset_db.py  run.sh  shynotes.db  vercel.json  vite.config.js
api/: config.py  database.py  index.py  models.py  schemas.py  storage.py
api/auth/: manager.py  utils.py
docs/: auth_migration.md  auth_migration_feat.md  codemirror6_migration_plan.md  command_palette.md  data_flow_analysis_feat.md  editor_guide.md  editor_guide_feat.md  features.md  implementation_plan.md  index.html  keyboard_mouse_guide.md  offline_strategy_feat.md  optimization_plan.md  refactoring_plan_result.md  research_plan.md  safe_fail_conflict_management.md  skills_api.md  storage.md  storage_feat.md  sync_analysis.md  sync_analysis_feat.md  sync_race_condition_brainstorming.md  task.md  ui_layout.md  ui_layout_feat.md  ui_terminology.md  ui_terminology_feat.md  vite_vendor_migration.md  vite_vendor_migration_feat.md  vitest_unit_test_feat.md  walkthrough.md  walkthrough_feat.md
docs/plan/: implementation_plan.md  research_plan.md
scripts/: shynote_api_post.py
skills/shynote-api-client/: SKILL.md
src/: codemirror-deps.js  database.py  main.py  models.py  schemas.py  vendor.js
static/: app.js  changelog.md  config.json  index.html  local_db.js  manifest.json  style.css  sw.js  version.json
tests/: app.test.js  test_reset.py  ui.test.js
(+47 files in other folders)
